@@ -49,20 +49,25 @@ module TMail
     class << self
       def unquote_and_convert_to(text, to_charset, from_charset = "iso-8859-1", preserve_underscores=false)
         return "" if text.nil?
-        if text =~ /^=\?(.*?)\?(.)\?(.*)\?=$/
-          from_charset = $1
-          quoting_method = $2
-          text = $3
-          case quoting_method.upcase
-            when "Q" then
-              unquote_quoted_printable_and_convert_to(text, to_charset, from_charset, preserve_underscores)
-            when "B" then
-              unquote_base64_and_convert_to(text, to_charset, from_charset)
-            else
-              raise "unknown quoting method #{quoting_method.inspect}"
-          end
-        else
-          convert_to(text, to_charset, from_charset)
+        text.gsub(/(.*?)(?:(?:=\?(.*?)\?(.)\?(.*?)\?=)|$)/) do
+          before = $1
+          from_charset = $2
+          quoting_method = $3
+          text = $4
+
+          before = convert_to(before, to_charset, from_charset) if before.length > 0
+          before + case quoting_method
+              when "q", "Q" then
+                unquote_quoted_printable_and_convert_to(text, to_charset, from_charset, preserve_underscores)
+              when "b", "B" then
+                unquote_base64_and_convert_to(text, to_charset, from_charset)
+              when nil then
+                # will be nil at the end of the string, due to the nature of
+                # the regex used.
+                ""
+              else
+                raise "unknown quoting method #{quoting_method.inspect}"
+            end
         end
       end
  
