@@ -1,6 +1,8 @@
 *SVN*
 
-* Make sure DOS newlines in quoted-printable text are normalized to unix newlines before unquoting. closes $166 and #4452. [Jamis Buck]
+* Make sure quoted-printable text is decoded correctly when only portions of the text are encoded. closes #3154. [jon@siliconcircus.com]
+
+* Make sure DOS newlines in quoted-printable text are normalized to unix newlines before unquoting. closes #4166 and #4452. [Jamis Buck]
 
 * Fixed that iconv decoding should catch InvalidEncoding #3153 [jon@siliconcircus.com]
 
